--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
   "author": "muhwezi deo <aggrey256@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-graphql": "^0.8.0",
     "graphql": "^14.4.1",
